--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "sequelize": "^6.31.0"
   },
   "devDependencies": {
+    "eslint": "^8.39.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.27.5",
     "sequelize-cli": "^6.6.0"
   }
 }
