--- a/package.json
+++ b/package.json
@@ -2,15 +2,16 @@
   "name": "barracafe_api",
   "version": "1.0.0",
   "description": "Api para o barracafe app",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon server.js"
   },
   "author": "Alex Diego",
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "helmet": "^6.1.5",
     "mysql2": "^3.2.4",
     "sequelize": "^6.31.0"
   },
@@ -18,6 +19,7 @@
     "eslint": "^8.39.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.27.5",
+    "nodemon": "^2.0.22",
     "sequelize-cli": "^6.6.0"
   }
 }
